src/ea-core/org.ect.ea.extensions.clocks/src/org/ect/ea/extensions/clocks/parsers/TCADataParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g 2011-03-21 18:26:09

package org.ect.ea.extensions.clocks.parsers;

import java.lang.Integer;
import java.lang.Math;

import org.eclipse.emf.common.util.EList;
import org.eclipse.emf.common.util.BasicEList;
import org.ect.ea.extensions.clocks.ClockUtils;
import org.ect.ea.extensions.clocks.codegen.CodegenUtils;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class TCADataParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NOT", "LPAREN", "RPAREN", "AND", "OR", "LEQ", "PLUS", "TRUE", "FALSE", "ASSIGN", "MINUS", "IDENT", "INT", "SOURCE", "TARGET", "WS"
    };
    public static final int SOURCE=17;
    public static final int INT=16;
    public static final int NOT=4;
    public static final int TARGET=18;
    public static final int MINUS=14;
    public static final int AND=7;
    public static final int EOF=-1;
    public static final int TRUE=11;
    public static final int LPAREN=5;
    public static final int RPAREN=6;
    public static final int WS=19;
    public static final int OR=8;
    public static final int ASSIGN=13;
    public static final int IDENT=15;
    public static final int PLUS=10;
    public static final int FALSE=12;
    public static final int LEQ=9;

    // delegates
    // delegators


        public TCADataParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public TCADataParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return TCADataParser.tokenNames; }
    public String getGrammarFileName() { return "/ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g"; }



      /** Convenience constructor. Construct a new TCADataParser on the given 
        * String. The new TCADataParser is built using classes CommonTokenStream,
        * TCADataLexer and ANTLRStringStream. Parsing is done to check syntax. 
        */ 
        public TCADataParser(String input) {
          this(new CommonTokenStream(new TCADataLexer(new ANTLRStringStream(input))));
        }
        
        /** Convenience constructor. Construct a new TCADataParser on the given 
        * String. The new TCADataParser is built using classes CommonTokenStream,
        * TCADataLexer and ANTLRStringStream. 
        * @param codegen Whether parsing is done with the aim of code generation 
        * (as opposed to parsing with the aim of editing or syntax checking, for 
        * example). If this is false, the parser just checks for syntactical 
        * wellformedness. If true, the output may be different, for example, 
        * additional information/constraints may be added. 
        */
        public TCADataParser(String input, boolean codegen) {
          this(input);
          this.parseForCodeGen = codegen;
        }

        private boolean parseForCodeGen = false;

        private final static String DATA_PREFIX = CodegenUtils.DATA_PREFIX;  



    // $ANTLR start "data_constraint"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:69:1: data_constraint returns [String dc = \"\"] : (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) ( (op= AND | op= OR ) (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) )* ;
    public final String data_constraint() throws RecognitionException {
        String dc =  "";

        Token n=null;
        Token l=null;
        Token r=null;
        Token op=null;
        String b = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:71:5: ( (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) ( (op= AND | op= OR ) (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) )* )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:71:7: (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) ( (op= AND | op= OR ) (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) )*
            {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:71:7: (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==LPAREN||LA1_0==TRUE||(LA1_0>=MINUS && LA1_0<=TARGET)) ) {
                alt1=1;
            }
            else if ( (LA1_0==NOT) ) {
                alt1=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return dc;}
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:72:9: b= boolatom
                    {
                    pushFollow(FOLLOW_boolatom_in_data_constraint207);
                    b=boolatom();

                    state._fsp--;
                    if (state.failed) return dc;
                    if ( state.backtracking==0 ) {
                      if (b != "") dc = b;
                    }

                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:73:11: n= NOT l= LPAREN b= boolatom r= RPAREN
                    {
                    n=(Token)match(input,NOT,FOLLOW_NOT_in_data_constraint224); if (state.failed) return dc;
                    l=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_data_constraint228); if (state.failed) return dc;
                    pushFollow(FOLLOW_boolatom_in_data_constraint232);
                    b=boolatom();

                    state._fsp--;
                    if (state.failed) return dc;
                    r=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_data_constraint236); if (state.failed) return dc;
                    if ( state.backtracking==0 ) {
                      if (b != "") dc = dc + n.getText() + l.getText() + b + r.getText();
                    }

                    }
                    break;

            }

            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:75:7: ( (op= AND | op= OR ) (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN ) )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=AND && LA4_0<=OR)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:9: (op= AND | op= OR ) (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN )
            	    {
            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:9: (op= AND | op= OR )
            	    int alt2=2;
            	    int LA2_0 = input.LA(1);

            	    if ( (LA2_0==AND) ) {
            	        alt2=1;
            	    }
            	    else if ( (LA2_0==OR) ) {
            	        alt2=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return dc;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 2, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt2) {
            	        case 1 :
            	            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:10: op= AND
            	            {
            	            op=(Token)match(input,AND,FOLLOW_AND_in_data_constraint269); if (state.failed) return dc;

            	            }
            	            break;
            	        case 2 :
            	            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:17: op= OR
            	            {
            	            op=(Token)match(input,OR,FOLLOW_OR_in_data_constraint273); if (state.failed) return dc;

            	            }
            	            break;

            	    }

            	    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:24: (b= boolatom | n= NOT l= LPAREN b= boolatom r= RPAREN )
            	    int alt3=2;
            	    int LA3_0 = input.LA(1);

            	    if ( (LA3_0==LPAREN||LA3_0==TRUE||(LA3_0>=MINUS && LA3_0<=TARGET)) ) {
            	        alt3=1;
            	    }
            	    else if ( (LA3_0==NOT) ) {
            	        alt3=2;
            	    }
            	    else {
            	        if (state.backtracking>0) {state.failed=true; return dc;}
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 3, 0, input);

            	        throw nvae;
            	    }
            	    switch (alt3) {
            	        case 1 :
            	            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:76:25: b= boolatom
            	            {
            	            pushFollow(FOLLOW_boolatom_in_data_constraint279);
            	            b=boolatom();

            	            state._fsp--;
            	            if (state.failed) return dc;
            	            if ( state.backtracking==0 ) {
            	              if (b != "") dc = dc + op.getText() + b;
            	            }

            	            }
            	            break;
            	        case 2 :
            	            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:77:11: n= NOT l= LPAREN b= boolatom r= RPAREN
            	            {
            	            n=(Token)match(input,NOT,FOLLOW_NOT_in_data_constraint295); if (state.failed) return dc;
            	            l=(Token)match(input,LPAREN,FOLLOW_LPAREN_in_data_constraint299); if (state.failed) return dc;
            	            pushFollow(FOLLOW_boolatom_in_data_constraint303);
            	            b=boolatom();

            	            state._fsp--;
            	            if (state.failed) return dc;
            	            r=(Token)match(input,RPAREN,FOLLOW_RPAREN_in_data_constraint307); if (state.failed) return dc;
            	            if ( state.backtracking==0 ) {
            	              if (b != "") dc = dc + op.getText() + n.getText() + l.getText() + b + r.getText();
            	            }

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return dc;
    }
    // $ANTLR end "data_constraint"


    // $ANTLR start "boolatom"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:81:1: boolatom returns [String at =\"\"] : ( TRUE | comparison );
    public final String boolatom() throws RecognitionException {
        String at = "";

        Token TRUE1=null;
        String comparison2 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:83:5: ( TRUE | comparison )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==TRUE) ) {
                alt5=1;
            }
            else if ( (LA5_0==LPAREN||(LA5_0>=MINUS && LA5_0<=TARGET)) ) {
                alt5=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return at;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:83:7: TRUE
                    {
                    TRUE1=(Token)match(input,TRUE,FOLLOW_TRUE_in_boolatom344); if (state.failed) return at;
                    if ( state.backtracking==0 ) {
                      at = (TRUE1!=null?TRUE1.getText():null);
                    }

                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:84:7: comparison
                    {
                    pushFollow(FOLLOW_comparison_in_boolatom355);
                    comparison2=comparison();

                    state._fsp--;
                    if (state.failed) return at;
                    if ( state.backtracking==0 ) {
                      if (comparison2 != "") at = comparison2;
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return at;
    }
    // $ANTLR end "boolatom"


    // $ANTLR start "comparison"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:87:1: comparison returns [String comp = \"\"] : a1= expression ( ASSIGN a2= expression | LEQ a2= expression ) ;
    public final String comparison() throws RecognitionException {
        String comp =  "";

        Token ASSIGN3=null;
        Token LEQ4=null;
        String a1 = null;

        String a2 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:89:5: (a1= expression ( ASSIGN a2= expression | LEQ a2= expression ) )
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:89:7: a1= expression ( ASSIGN a2= expression | LEQ a2= expression )
            {
            pushFollow(FOLLOW_expression_in_comparison385);
            a1=expression();

            state._fsp--;
            if (state.failed) return comp;
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:90:7: ( ASSIGN a2= expression | LEQ a2= expression )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ASSIGN) ) {
                alt6=1;
            }
            else if ( (LA6_0==LEQ) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return comp;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:90:8: ASSIGN a2= expression
                    {
                    ASSIGN3=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_comparison394); if (state.failed) return comp;
                    pushFollow(FOLLOW_expression_in_comparison398);
                    a2=expression();

                    state._fsp--;
                    if (state.failed) return comp;
                    if ( state.backtracking==0 ) {
                      if (a1 != "") {comp = a1; if (a2 != "") comp = comp + (ASSIGN3!=null?ASSIGN3.getText():null) + a2;}
                    }

                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:91:9: LEQ a2= expression
                    {
                    LEQ4=(Token)match(input,LEQ,FOLLOW_LEQ_in_comparison410); if (state.failed) return comp;
                    pushFollow(FOLLOW_expression_in_comparison414);
                    a2=expression();

                    state._fsp--;
                    if (state.failed) return comp;
                    if ( state.backtracking==0 ) {
                      if (a1 != "") {comp = a1; if (a2 != "") comp = comp + (LEQ4!=null?LEQ4.getText():null) + a2;}
                    }

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return comp;
    }
    // $ANTLR end "comparison"


    // $ANTLR start "expression"
    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:94:1: expression returns [String arith = \"\"] : ( ( MINUS element exp )=> MINUS element exp | ( element exp )=> element exp | ( MINUS element )=> MINUS element | ( element )=> element | ( LPAREN expression MINUS expression RPAREN exp )=> LPAREN e1= expression MINUS e2= expression RPAREN exp | LPAREN e1= expression MINUS e2= expression RPAREN );
    public final String expression() throws RecognitionException {
        String arith =  "";

        Token MINUS6=null;
        Token MINUS11=null;
        Token LPAREN13=null;
        Token MINUS14=null;
        Token RPAREN15=null;
        Token LPAREN17=null;
        Token MINUS18=null;
        Token RPAREN19=null;
        String e1 = null;

        String e2 = null;

        String element5 = null;

        String exp7 = null;

        String element8 = null;

        String exp9 = null;

        String element10 = null;

        String element12 = null;

        String exp16 = null;


        try {
            // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:96:5: ( ( MINUS element exp )=> MINUS element exp | ( element exp )=> element exp | ( MINUS element )=> MINUS element | ( element )=> element | ( LPAREN expression MINUS expression RPAREN exp )=> LPAREN e1= expression MINUS e2= expression RPAREN exp | LPAREN e1= expression MINUS e2= expression RPAREN )
            int alt7=6;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:96:7: ( MINUS element exp )=> MINUS element exp
                    {
                    MINUS6=(Token)match(input,MINUS,FOLLOW_MINUS_in_expression457); if (state.failed) return arith;
                    pushFollow(FOLLOW_element_in_expression459);
                    element5=element();

                    state._fsp--;
                    if (state.failed) return arith;
                    pushFollow(FOLLOW_exp_in_expression461);
                    exp7=exp();

                    state._fsp--;
                    if (state.failed) return arith;
                    if ( state.backtracking==0 ) {
                      if (element5 != "") 
                              {arith = (MINUS6!=null?MINUS6.getText():null) + element5; 
                               if (exp7 != "") 
                                arith = arith + exp7;
                              }
                            
                    }

                    }
                    break;
                case 2 :
                    // /ufs/kemper/repos/reo/ea/org.ect.ea.extensions.clocks/src/org.ect/ea/extensions/clocks/parsers/TCAData.g:103:7: ( element exp )=> element exp
                    {
                    pushFollow(FOLLOW_element_in_expression519);
                    element8=element();
